globus-proxy-utils (6.2-1+gt6.@distro@) @distro@; urgency=low

  * version update

 -- Globus Toolkit <support@globus.org>  Sat, 01 Feb 2014 17:16:22 -0500

globus-proxy-utils (6.1-1+gt6.@distro@) @distro@; urgency=low

  * Add openssl dependency

 -- Globus Toolkit <support@globus.org>  Thu, 23 Jan 2014 08:56:56 -0500

globus-proxy-utils (6.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Thu, 23 Jan 2014 08:54:47 -0500

globus-proxy-utils (5.2-1) unstable; urgency=low

  * GT-387: grid-proxy-init -pwstdin reads too many characters

 -- Globus Toolkit <support@globus.org>  Tue, 10 Sep 2013 09:37:41 -0400

globus-proxy-utils (5.1-1) unstable; urgency=low

  * GT-272: Increase default proxy key size

 -- Globus Toolkit <support@globus.org>  Wed, 15 May 2013 09:47:55 -0400

globus-proxy-utils (5.0-2) unstable; urgency=low

  * Update for 5.2.0 release

 -- Globus Toolkit <support@globus.org>  Mon, 05 Dec 2011 17:42:01 -0500

globus-proxy-utils (5.0-1) unstable; urgency=low

  * Remove obsolete get-orig-source rules

 -- Globus Toolkit <support@globus.org>  Wed, 23 Nov 2011 14:54:53 -0500

globus-proxy-utils (5.0-0) unstable; urgency=low

  * Update to 5.1.3

 -- Globus Toolkit <support@globus.org>  Tue, 15 Nov 2011 16:26:13 -0500

globus-proxy-utils (4.2-0GT5.1.1a) unstable; urgency=low

  * add globus_gsi_cred_read_cert_bio

 -- Globus Toolkit <support@globus.org>  Mon, 20 Jun 2011 15:51:00 -0400

globus-proxy-utils (4.1-0GT5.1.1a) unstable; urgency=low

  * Non-Maintainer Upload -- Update to Globus Toolkit 5.1.1

 -- Globus Toolkit <support@globus.org>  Thu, 26 May 2011 18:12:22 -0400

globus-proxy-utils (4.0-0GT5.1.1a) unstable; urgency=low

  * Non-Maintainer Upload -- Update to Globus Toolkit 5.1.1

 -- Globus Toolkit <support@globus.org>  Thu, 26 May 2011 18:12:22 -0400

globus-proxy-utils (3.9-2) unstable; urgency=low

  * Add README file
