@@ -1,3 +1,9 @@
+globus-proxy-utils (6.3-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix test cred permissions
+
+ -- Globus Toolkit <support@globus.org>  Sat, 01 Feb 2014 17:23:05 -0500
+
 globus-proxy-utils (6.2-1+gt6.@distro@) @distro@; urgency=low
 
   * version update
